# u2f-touch-detector

./: Cargo.toml  README.md  flake.nix  module.nix  package.nix  shell.nix  u2f-touch-detector.service  u2f-touch-detector.socket
src/: command.rs  config.rs  device.rs  main.rs  message.rs  notify.rs  packet.rs  socket.rs
