[package]
name = "u2f-touch-detector"
version = "0.1.0"
edition = "2021"

[dependencies]
camino = { version = "1.1.6", default-features = false }
clap = { version = "4.5.4", features = ["color", "derive", "error-context", "help", "std", "suggestions", "usage", "wrap_help"], default-features = false }
color-eyre = { version = "0.6.2", default-features = false, features = ["capture-spantrace"] }
confique = { version = "0.2.5", default-features = false, features = ["toml"] }
culpa = { version = "1.0.1", default-features = false }
directories = { version = "5.0.1", default-features = false }
eyre = { version = "0.6.8", default-features = false }
hex = { version = "0.4.3", default-features = false, features = ["alloc"] }
hidapi = { version = "2.6.1", default-features = false, features = ["linux-native"] }
listenfd = { version = "1.0.1", default-features = false }
serde = { version = "1.0.204", features = ["derive", "std"], default-features = false }
tokio = { version = "1.37.0", default-features = false, features = ["sync"] }
toml = { version = "0.8.15", default-features = false, features = ["parse"] }
tracing = { version = "0.1.37", default-features = false, features = ["attributes", "std"] }
tracing-error = { version = "0.2.0", default-features = false }
tracing-subscriber = { version = "0.3.17", default-features = false, features = ["env-filter", "fmt", "ansi", "tracing-log"] }
zerocopy = { version = "0.7.32", features = ["derive"] }
